Succefully running but errror in cli mode